# Penalty-Kick-Quality-Scorer

./: .gitignore  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: sync-to-huggingface.yml
docs/: DEPLOY_HUGGINGFACE.md  METHOD.md  NOTEBOOK_MIGRATION.md
examples/: README.md
penalty-kick-distancer/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
penalty-kick-distancer/docs/: DEPLOY_HUGGINGFACE.md
penalty-kick-distancer/scripts/: export_yolo_model.py  prepare_openimages_ball_dataset.py  smoke_test_video.py  train_yolov8_ball.py
penalty-kick-distancer/src/penalty_kick_distancer/: __init__.py  model_loader.py  tracking.py  video_processor.py  visualization.py
penalty-kick-distancer/tests/: test_scoring.py  test_video_processor_smoke.py
src/penalty_kick_distancer/: calibration.py  config.py  model_loader.py  scoring.py  utils.py  video_processor.py
tests/: test_calibration.py
