[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penalty-kick-distancer"
version = "0.1.0"
description = "YOLO ball detection plus target distance scoring for penalty-kick videos."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dimas"}]
dependencies = [
  "gradio==5.0.0",
  "ultralytics>=8.3.0,<9",
  "opencv-python-headless>=4.10.0,<5",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "pillow>=10,<12",
  "huggingface_hub>=0.25,<1",
]

[project.optional-dependencies]
data = ["fiftyone>=0.24.0", "PyYAML>=6,<7"]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
