[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penalty-kick-distancer"
version = "0.1.0"
description = "YOLO ball detection plus target distance scoring for penalty-kick videos."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dimas"}]
dependencies = [
  "gradio==5.45.0",
  "ultralytics",
  "opencv-python-headless",
  "numpy",
  "pandas",
  "matplotlib",
  "pillow",
  "huggingface_hub",
]

[project.optional-dependencies]
data = ["fiftyone>=0.24.0", "PyYAML>=6,<7"]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
