[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penalty-kick-distancer"
version = "0.1.0"
description = "YOLO ball detection plus target distance scoring for penalty-kick videos."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dimas"}]
dependencies = [
  "gradio==5.0.0",
  "ultralytics==8.3.0",
  "opencv-python-headless==4.10.0.84",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "matplotlib==3.9.2",
  "pillow==10.4.0",
  "huggingface_hub==0.25.2",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
data = ["fiftyone>=0.24.0"]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

